macro(ADD_MODULE MODULE)
	SET(CMAKE_C_FLAGS "-O2 -fopenmp")
	add_executable(test_${MODULE} test_${MODULE}.c)
	target_link_libraries(test_${MODULE} ${PROJECT_NAME})
endmacro(ADD_MODULE)

# set(CMAKE_C_FLAGS "-O2 -fopenmp")
# add_executable(test2 test.c)
# target_link_libraries(test2 ${PROJECT_NAME})
ADD_MODULE(example)